name:                hschedule
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hschedule#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Data.Time.Schedule
                       Data.Time.Schedule.Cron
                       Data.Time.Schedule.Cron.Parser
                       Data.Time.Schedule.Cron.Types
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hashable
                     , lexer-applicative
                     , megaparsec
                     , psqueues
                     , recursion-schemes
                     , regex-applicative
                     , srcloc
                     , transformers-base
                     , time
  default-language:    Haskell2010
  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    KindSignatures
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances
    ViewPatterns

test-suite hschedule-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-ant-xml
                     , tasty-hunit
                     , hschedule
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hschedule
